Fix how-it-works section alignment and image sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,9 @@ F22F00
   background: #00AC72; /* Gecko Browsers */
 }
 
+body {
+  padding-top: 70px;
+}
 
 html,
 body,
@@ -149,7 +152,8 @@ nav.navbar-default {
     width:65%;
     display: block;
     margin-left: auto;
-    margin-right: auto 
+    margin-right: auto;
+    max-height:200px;
 }
 
 .howitworks h3 {
